syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.Grpc.Protos";

service SecurityLogin{
	rpc GetSecurityLogin(IdRequest6) returns (SecurityLoginReply);
    rpc GetSecurityLogins(google.protobuf.Empty) returns (SecurityLogins);
    rpc AddGetSecurityLogins(SecurityLogins) returns (google.protobuf.Empty);
    rpc UpdateGetSecurityLogins(SecurityLogins) returns (google.protobuf.Empty);
    rpc DeleteGetSecurityLogins(SecurityLogins) returns (google.protobuf.Empty);
}

message  SecurityLogins{
    repeated SecurityLoginReply SecurityLoginReplies = 1;
}

message IdRequest6 {
	string Id = 1;
}

message SecurityLoginReply{
         string Id=1;
         string Login=2;
         string Password=3;
         google.protobuf.Timestamp Created=4;
         google.protobuf.Timestamp PasswordUpdate=5;
         google.protobuf.Timestamp AgreementAccepted=6;
         bool IsLocked=7;
         bool IsInactive=8;
         string EmailAddress=9;
         string PhoneNumber=10;
         string FullName=11;
         bool ForceChangePassword=12;
         string PrefferredLanguage=13;
}